Task [UNI-67] refactoring unit tests